# advent4-avr

./: CMakeLists.txt  README.md
sim/: advent4-avr.pdsprj
src/: adventure.h  main.c  ring_buf.c  ring_buf.h  types.h  uart0.c  uart0.h  utils.c  utils.h
src/advent4/: advcave.h  advdec.h  advdef.h  advent.c  advent.h  advent1.h  advent2.h  advent3.h  advent4.h  advword.h  database.c  english.c  itverb.c  proto.h  turn.c  verb.c
